feat: add Assistant sidebar

--- a/index.html
+++ b/index.html
@@ -147,6 +147,11 @@
           data-label="newTabAction"
           tabindex="-1"
         ></button>
+        <button
+          id="assistant-button"
+          class="navbar-action-button i carbon:robot"
+          tabindex="-1"
+        ></button>
       </div>
     </div>
 
@@ -345,6 +350,8 @@
 
     <!-- add scripts in Gruntfile.js -->
 
+    <div id="assistant-sidebar-root"></div>
+    <script src="vite-react/dist/assets/main.js"></script>
     <script src="dist/bundle.js"></script>
   </body>
 </html>
