--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="dist/bundle.css" />
     <link rel="stylesheet" href="ext/icons/iconfont.css" />
+    <link rel="stylesheet" href="css/assistantSidebar.css" />
   </head>
 
   <body>
@@ -145,6 +146,11 @@
           id="add-tab-button"
           class="navbar-action-button i carbon:add"
           data-label="newTabAction"
+          tabindex="-1"
+        ></button>
+        <button
+          id="assistant-button"
+          class="navbar-action-button i carbon:bot"
           tabindex="-1"
         ></button>
       </div>
@@ -345,6 +351,8 @@
 
     <!-- add scripts in Gruntfile.js -->
 
+    <div id="assistant-sidebar-root" hidden></div>
     <script src="dist/bundle.js"></script>
+    <script type="module" src="vite-react/dist/assets/index.js"></script>
   </body>
 </html>
