--- a/index.html
+++ b/index.html
@@ -147,15 +147,40 @@
           data-label="newTabAction"
           tabindex="-1"
         ></button>
+        <button
+          id="ai-assistant-button"
+          class="navbar-action-button i carbon:chatbot"
+          data-label="openAI"
+          title="AI Assistant"
+          tabindex="-1"
+        ></button>
       </div>
-    </div>
+      </div>
 
-    <button
-      id="switch-task-button"
-      class="navbar-action-button theme-text-color windowDragHandle i"
-      data-label="viewTasks"
-      tabindex="-1"
-    >
+      <style>
+        #content-container {
+          display: flex;
+          height: calc(100vh - 40px);
+        }
+        #webviews {
+          flex: 1;
+        }
+        #ai-panel {
+          width: 0;
+          overflow: hidden;
+          transition: width 0.3s ease;
+        }
+        #ai-panel.open {
+          width: 300px;
+        }
+      </style>
+
+      <button
+        id="switch-task-button"
+        class="navbar-action-button theme-text-color windowDragHandle i"
+        data-label="viewTasks"
+        tabindex="-1"
+      >
       <svg
         version="1.1"
         viewBox="0.0 0.0 26.0 26.0"
@@ -192,20 +217,25 @@
 
     <div id="overlay"></div>
 
-    <div id="webviews">
-      <div id="leftArrowContainer" class="arrow-indicator">
-        <i id="leftArrow" class="i carbon:chevron-left"></i>
+    <div id="content-container">
+      <div id="webviews">
+        <div id="leftArrowContainer" class="arrow-indicator">
+          <i id="leftArrow" class="i carbon:chevron-left"></i>
+        </div>
+        <div id="rightArrowContainer" class="arrow-indicator">
+          <i id="rightArrow" class="i carbon:chevron-right"></i>
+        </div>
+        <img id="webview-placeholder" hidden aria-hidden="true" />
+        <div id="ntp-content">
+            <img id="ntp-background" hidden>
+            <div id="ntp-background-controls">
+              <button id="ntp-image-remove"><i class="i carbon:trash-can"></i></button>
+              <button id="ntp-image-picker"><i class="i carbon:camera"></i></button>
+            </div>
+        </div>
       </div>
-      <div id="rightArrowContainer" class="arrow-indicator">
-        <i id="rightArrow" class="i carbon:chevron-right"></i>
-      </div>
-      <img id="webview-placeholder" hidden aria-hidden="true" />
-      <div id="ntp-content">
-          <img id="ntp-background" hidden>
-          <div id="ntp-background-controls">
-            <button id="ntp-image-remove"><i class="i carbon:trash-can"></i></button>
-            <button id="ntp-image-picker"><i class="i carbon:camera"></i></button>
-          </div>
+      <div id="ai-panel">
+        <div id="ai-extension-root"></div>
       </div>
     </div>
 
@@ -346,5 +376,6 @@
     <!-- add scripts in Gruntfile.js -->
 
     <script src="dist/bundle.js"></script>
+    <script type="module" src="extensions/ai-assistant/entry.js"></script>
   </body>
 </html>
