feat: make assistant panel resizable

--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
     </div>
 
     <div id="assistant-panel">
+      <div id="assistant-panel-resizer"></div>
       <div id="assistant-panel-react-root"></div>
     </div>
 
